--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@
     --colorPalletOne: #612C8A;
     --colorPalletTwo: #F4C301;
     --colorPalletThree: #FF3366;
-    --fontBody: 'Lexend', sans-serif;;
-    --fontTitle: 'Bogart', sans-serif;
+    --fontOne: 'Lexend', sans-serif;;
+    --fontTwo: 'Bogart', sans-serif;
+    --fontThree: 'Recoleta', sans-serif;
+    --fontFour: 'Block Berthold Regular';
 }
 
 * {
@@ -40,12 +42,54 @@ header {
 
 #headerLogo {
     position: relative;
-    width: 12%;
+    width: 25rem;
+    height: 10rem;
+    background-image: url(/assets/imgs/Logo2.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 nav {
-    width: 90%;
+    width: 100%;
+    height: 5rem;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
     background-color: green;
+}
+
+.navBar {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    list-style: none;
+}
+
+.navBar li {
+    width: 10%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    align-content: center;
+}
+
+.navBar a {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+    text-decoration: none;
+    color: #000000;
 }
 
 .socialHeader {
@@ -82,11 +126,36 @@ nav {
 
 main {
     width: 100%;
+    height: 75rem;
+    display: flex;
     background-color: yellow;
+}
+
+#sideBar {
+    width: 15%;
+    display: none;
+    background-color: wheat;
+}
+
+#sideBarMenu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100%;
+    display: none; /* Inicialmente escondido */
+    padding: 1rem;
+    color: white;
+}
+
+article {
+    width: 85%;
+    background-color: #000000;
 }
 
 footer {
     width: 100%;
+    height: 10rem;
     background-color: pink;
 }
 
