--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
     align-content: flex-start;
     justify-content: center;
     color: #000000;
+    font-family: var(--fontOne);
+    font-size: 1rem;
 }
 
 header {
@@ -37,7 +39,6 @@ header {
     justify-content: space-between;
     align-items: center;
     align-content: center;
-    background-color: red;
 }
 
 #headerLogo {
@@ -60,7 +61,6 @@ nav {
     justify-content: space-around;
     align-items: center;
     align-content: center;
-    background-color: green;
 }
 
 .navBar {
@@ -128,34 +128,136 @@ main {
     width: 100%;
     height: 75rem;
     display: flex;
-    background-color: yellow;
 }
 
 #sideBar {
     width: 15%;
+    height: 100%;
     display: none;
-    background-color: wheat;
 }
 
 #sideBarMenu {
     position: fixed;
     top: 0;
     left: 0;
-    width: 200px;
+    width: 175px;
     height: 100%;
-    display: none; /* Inicialmente escondido */
-    padding: 1rem;
-    color: white;
+    display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+}
+
+#sideBarMenu li {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    text-align: center;
+}
+
+#sideBarMenu a {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
 }
 
 article {
     width: 85%;
-    background-color: #000000;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+section {
+    width: 100%;
+    height: 20%;
+    padding: 2rem;
 }
 
 footer {
     width: 100%;
     height: 10rem;
-    background-color: pink;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
+footer ul {
+    list-style: none;
+}
+
+.footerBar {
+    width: 45%;
+    height: 100%;
+    margin-left: 2rem;
+    text-align: start;
+    align-content: center;
+    column-count: 2;
+    column-gap: 10px;
+}
+
+.footerBar li {
+    width: 100%;
+    height: 1.7rem;
+    display: flex;
+    align-content: center;
+}
+
+.footerBar a {
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    text-decoration: none;
+    color: #000000;
+}
+
+.contactInfo {
+    width: 40%;
+    height: 100%;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.socialFooter {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.socialFooter li {
+    width: 25%;
+    height: 50%;
+    text-align: center;
+    align-content: center;
+}
+
+address {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+address a {
+    width: 30%;
+    height: 45%;
+    text-align: center;
+    align-content: center;
+}
