--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ article {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: space-around;
+    row-gap: 20rem;
 }
 
 section {
@@ -288,3 +289,95 @@ footer ul {
     text-decoration: none;
     color: #FFFFFF;
 }
+
+/* ------ professores.html ------ */
+
+.container {
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 35px;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+.container .card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 0 auto;
+    background: #000;
+    border-radius: 15px;
+    box-shadow: 0 15px 60px rgba(0, 0, 0, 0.5);
+}
+
+.container .card .face {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .card .face.face1 {
+    box-sizing: border-box;
+    padding: 20px;
+}
+
+.container .card .face.face1 h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face1 .cardOne {
+    background-color: #FFFFFF;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.container .card .face.face1 .cardTwo {
+    background-color: #FFFFFF;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.container .card .face.face1 .cardThree {
+    background-color: #FFFFFF;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.container .card .face.face2 { transition: 0.5s; }
+
+.container .card .face.face2 h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 10em;
+    color: #fff;
+    transition: 0.5s;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+}
+
+.container .card:hover .face.face2 { height: 60px; }
+.container .card:hover .face.face2 h2 { font-size: 2em; }
+
+.container .card:nth-child(1) .face.face2 {
+    background-image: linear-gradient(40deg, var(--colorPalletTwo) 0%, var(--colorPalletThree) 45%, var(--colorPalletOne) 100%);
+    border-radius: 15px;
+}
+
+.container .card:nth-child(2) .face.face2 {
+    background-image: linear-gradient(40deg, var(--colorPalletThree) 0%, var(--colorPalletOne) 45%, var(--colorPalletTwo) 100%);
+    border-radius: 15px;
+}
+
+.container .card:nth-child(3) .face.face2 {
+    background-image: linear-gradient(40deg, var(--colorPalletOne) 0%, var(--colorPalletThree) 45%, var(--colorPalletTwo) 100%);
+    border-radius: 15px;
+}
+
+/* ------------------------------ */
