--- a/css/style.css
+++ b/css/style.css
@@ -207,89 +207,6 @@ section {
 
 section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 
-footer {
-    width: 100%;
-    height: 10rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
-    align-items: center;
-    background: var(--colorPalletOne);
-}
-
-footer ul {
-    list-style: none;
-}
-
-.footerBar {
-    width: 45%;
-    height: 100%;
-    margin-left: 2rem;
-    text-align: start;
-    align-content: center;
-    column-count: 2;
-    column-gap: 10px;
-}
-
-.footerBar li {
-    width: 100%;
-    height: 1.7rem;
-    display: flex;
-    align-content: center;
-}
-
-.footerBar a {
-    width: 100%;
-    height: 100%;
-    align-content: center;
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-.footerBar a:hover {
-    background-color: var(--colorPalletTwo);
-    color: #000000;
-}
-.footerBar a:active {
-    background-color: var(--colorPalletThree);
-    color: #FFFFFF;
-}
-
-.contactInfo {
-    width: 40%;
-    height: 100%;
-    margin-right: 2rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.socialFooter {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.socialFooter li {
-    width: 25%;
-    height: 50%;
-    text-align: center;
-    align-content: center;
-}
-
-.socialFooter a {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
 /* ------ professores.html ------ */
 
 .container {
@@ -381,3 +298,213 @@ footer ul {
 }
 
 /* ------------------------------ */
+
+/* ------ calendario.html ------ */
+
+.articleCalendar { align-content: flex-start; }
+
+.currentDate {
+    width: 100%;
+    height: 5rem;
+    font-family: var(--fontTwo);
+    text-transform: uppercase;
+    text-align: center;
+    align-content: center;
+    font-size: 3rem;
+}
+
+.schoolDays {
+    width: 100%;
+    height: 2rem;
+    font-family: var(--fontTwo);
+    text-transform: uppercase;
+    text-align: center;
+    align-content: center;
+    font-size: 1.5rem;
+}
+
+.calendar {
+    width: 100%;
+    height: 30rem;
+    display: grid;
+    grid-template-rows: 5rem 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+#titleCalendar {
+    width: 55%;
+    height: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 3px solid #000000;
+}
+
+#titleCalendar span {
+    width: 3rem;
+    text-align: center;
+}
+
+#bodyCalendar {
+    width: 55%;
+    height: 25rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+}
+
+#bodyCalendar span {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+}
+
+.holiday {
+    background-color: #c2c2c2;
+    color: #FF0000 !important
+}
+
+.previusMouth {
+    background-color: #c2c2c2;
+    color: #808080;
+}
+
+.weekend {
+    background-color: #808080;
+    color: #FFFFFF;
+}
+
+#bodyCalendar span:hover {
+    background-color: var(--colorPalletOne);
+    color: #FFFFFF;
+}
+
+#bodyCalendar span:focus {
+    background-color: var(--colorPalletThree);
+    color: #FFFFFF;
+}
+
+.events {
+    width: 55%;
+    margin-top: 1rem;
+    display: flex;
+    border: solid 1px #000000;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+}
+
+.event {
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.event span {
+    width: 100%;
+    text-align: center;
+}
+
+.event:nth-child(odd) {
+    background-color: var(--colorPalletThree);
+    color: #FFFFFF;
+}
+
+/* ------------------------------ */
+
+footer {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--colorPalletOne);
+}
+
+footer ul {
+    list-style: none;
+}
+
+.footerBar {
+    width: 45%;
+    height: 100%;
+    margin-left: 2rem;
+    text-align: start;
+    align-content: center;
+    column-count: 2;
+    column-gap: 10px;
+}
+
+.footerBar li {
+    width: 100%;
+    height: 1.7rem;
+    display: flex;
+    align-content: center;
+}
+
+.footerBar a {
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.footerBar a:hover {
+    background-color: var(--colorPalletTwo);
+    color: #000000;
+}
+.footerBar a:active {
+    background-color: var(--colorPalletThree);
+    color: #FFFFFF;
+}
+
+.contactInfo {
+    width: 40%;
+    height: 100%;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.socialFooter {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.socialFooter li {
+    width: 25%;
+    height: 50%;
+    text-align: center;
+    align-content: center;
+}
+
+.socialFooter a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
