--- a/css/style.css
+++ b/css/style.css
@@ -270,12 +270,17 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     -webkit-text-fill-color: transparent;
 }
 
+.content {
+    text-align: center;
+}
+
 .container .card .face.face2 { transition: 0.5s; }
 
 .container .card .face.face2 h2 {
     margin: 0;
     padding: 0;
-    font-size: 10em;
+    font-size: 1.5rem;
+    text-align: center;
     color: #fff;
     transition: 0.5s;
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -283,7 +288,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 }
 
 .container .card:hover .face.face2 { height: 60px; }
-.container .card:hover .face.face2 h2 { font-size: 2em; }
+.container .card:hover .face.face2 h2 { font-size: 1rem; }
 
 .container .card:nth-child(1) .face.face2 {
     background-image: linear-gradient(40deg, var(--colorPalletTwo) 0%, var(--colorPalletThree) 45%, var(--colorPalletOne) 100%);
