--- a/css/style.css
+++ b/css/style.css
@@ -497,12 +497,49 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     overflow: hidden;
 }
 
-.articleCardapio {
-    align-content: flex-start;
+.articleCardapio { align-content: flex-start; }
+
+.articleCardapio section { padding: 0; }
+
+.currentDay button {
+    width: 2rem;
+    height: 3rem;
+    background-color: var(--colorPalletTwo);
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 
-.articleCardapio section {
-    padding: 0;
+#prevDay { margin-right: 1.5rem; }
+#prevDay:hover {
+    box-shadow:
+                5px 0px 0px 0px var(--colorPalletOne),
+                10px 0px 0px 0 var(--colorPalletThree),
+                15px 0px 0px 0px var(--colorPalletTwo);
+}
+#prevDay:active {
+    background-color: var(--colorPalletThree);
+    box-shadow:
+                5px 0px 0px 0px var(--colorPalletThree),
+                10px 0px 0px 0 var(--colorPalletTwo),
+                15px 0px 0px 0px var(--colorPalletOne);
+}
+
+#nextDay { margin-left: 1.5rem; }
+#nextDay:hover {
+    box-shadow:
+                -5px 0px 0px 0px var(--colorPalletOne),
+                -10px 0px 0px 0 var(--colorPalletThree),
+                -15px 0px 0px 0px var(--colorPalletTwo);
+}
+#nextDay:active {
+    background-color: var(--colorPalletThree);
+    box-shadow:
+                -5px 0px 0px 0px var(--colorPalletThree),
+                -10px 0px 0px 0 var(--colorPalletTwo),
+                -15px 0px 0px 0px var(--colorPalletOne);
 }
 
 .rope {
@@ -630,6 +667,14 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     font-size: 1.2rem;
     opacity: 0.8
 }
+
+.page1-desc a {
+    text-transform: uppercase;
+    color: var(--colorPalletTwo);
+}
+
+.page1-desc a:hover { color: #FFFFFF;}
+.page1-desc a:active { color: var(--colorPalletOne);}
 
 .page2 {
     position: relative;
@@ -772,12 +817,12 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.4)
 }
 
+/*DESJEJUM*/
 .pg2-photo {
     position: absolute;
     left: 0;
     width: 120%;
     height: 100%;
-    background-image: url("https://notbigmuzzy.github.io/codepen/example1/page2.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -945,12 +990,12 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.4)
 }
 
+/*ALMOÇO*/
 .pg3-photo {
     position: absolute;
     left: -20%;
     width: 120%;
     height: 100%;
-    background-image: url("https://notbigmuzzy.github.io/codepen/example1/page3.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -1119,12 +1164,12 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.4)
 }
 
+/*SOBREMESA*/
 .pg4-photo {
     position: absolute;
     left: 0;
     width: 120%;
     height: 100%;
-    background-image: url("https://notbigmuzzy.github.io/codepen/example1/page4.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
