--- a/css/style.css
+++ b/css/style.css
@@ -273,9 +273,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     -webkit-text-fill-color: transparent;
 }
 
-.content {
-    text-align: center;
-}
+.content { text-align: center; }
 
 .container .card .face.face2 { transition: 0.5s; }
 
@@ -1223,6 +1221,128 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
   
 /* ------------------------------ */
 
+/* ------ contato.html ------ */
+
+.articleContato { align-content: flex-start; }
+
+.contactContainer{
+    width: 85%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px 60px 30px 40px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.contactContainer .contactContent{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contactContainer .contactContent .left-side{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    position: relative;
+}
+
+.contactContent .left-side::before{
+    content: '';
+    position: absolute;
+    height: 70%;
+    width: 2px;
+    right: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #afafb6;
+}
+
+.contactContent .left-side .details{
+    margin: 14px;
+    text-align: center;
+}
+
+.contactContent .left-side .details i{
+    font-size: 30px;
+    color: #3e2093;
+    margin-bottom: 10px;
+}
+
+.contactContent .left-side .details .topic{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.contactContent .left-side .details .text-one,
+.contactContent .left-side .details .text-two{
+    font-size: 14px;
+    color: #afafb6;
+}
+
+.details a {
+    text-decoration: none;
+}
+
+.contactContainer .contactContent .right-side{
+    width: 75%;
+    margin-left: 75px;
+}
+
+.contactContent .right-side .topic-text{
+    font-size: 23px;
+    font-weight: 600;
+    color: #3e2093;
+}
+
+.right-side .input-box{
+    height: 50px;
+    width: 100%;
+    margin: 12px 0;
+}
+
+.right-side .input-box input,
+.right-side .input-box textarea{
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    background: #F0F1F8;
+    border-radius: 6px;
+    padding: 0 15px;
+    resize: none;
+}
+
+.right-side .message-box{ min-height: 110px; }
+
+.right-side .input-box textarea{ padding-top: 6px; }
+
+.right-side .button{
+    display: inline-block;
+    margin-top: 12px;
+}
+
+.right-side .button input[type="button"]{
+    color: #fff;
+    font-size: 18px;
+    outline: none;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 6px;
+    background: #3e2093;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button input[type="button"]:hover{ background: #5029bc; }
+
+/* ------------------------------ */
+
+
 footer {
     width: 100%;
     height: 10rem;
@@ -1308,6 +1428,40 @@ footer ul {
 
 
 /* ------ Responsividade ------ */
+
+@media (max-width: 950px) {
+    .contactContainer{
+      width: 90%;
+      padding: 30px 40px 40px 35px ;
+    }
+    .contactContainer .contactContent .right-side{
+     width: 75%;
+     margin-left: 55px;
+    }
+}
+@media (max-width: 820px) {
+    .contactContainer{
+      margin: 40px 0;
+      height: 100%;
+    }
+    .contactContainer .contactContent{
+      flex-direction: column-reverse;
+    }
+   .contactContainer .contactContent .left-side{
+     width: 100%;
+     flex-direction: row;
+     margin-top: 40px;
+     justify-content: center;
+     flex-wrap: wrap;
+   }
+   .contactContainer .contactContent .left-side::before{
+     display: none;
+   }
+   .contactContainer .contactContent .right-side{
+     width: 100%;
+     margin-left: 0;
+   }
+}
 
 @media (width < 321px) {
     main {
