--- a/css/style.css
+++ b/css/style.css
@@ -100,9 +100,7 @@ nav {
     background-color: var(--colorPalletThree);
 }
 
-.menu-toggle {
-    display: none;
-}
+.menu-toggle { display: none; }
 
 .navBar {
     width: 100%;
@@ -274,7 +272,6 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 }
 
 .content { text-align: center; }
-
 .container .card .face.face2 { transition: 0.5s; }
 
 .container .card .face.face2 h2 {
@@ -308,6 +305,162 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 
 /* ------------------------------ */
 
+/* ------ projetos.html ------ */
+#projectsArticle { align-content: flex-start; }
+.projectsSection { height: 35rem; }
+
+.projectsSection h1 {
+    margin-bottom: 0.2rem;;
+    font-size: 3rem;
+    width: 100%;
+    font-family: var(--fontThree);
+}
+
+.projectsContainer { height: 70%; }
+
+.container { width:100%; }
+
+.rotator-wrap {
+    overflow:hidden;
+    position:relative;
+    height:100%;
+    width:100%;
+    border-radius:5px;
+}
+
+.rotator {
+    width: 200%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    align-content: center;
+    background: #7ea1c8;
+    -webkit-animation: slide 10s infinite ease-out 5s;
+    -moz-animation:    slide 15s infinite ease-out 5s;
+    -ms-animation:     slide 15s infinite ease-out 5s;
+    -o-animation:      slide 15s infinite ease-out 5s;
+    animation:         slide 15s infinite ease-out 5s;
+}
+
+.rotator > li {
+    padding:15px;
+    width:12.5%;
+    float:left;
+    margin:0;
+    box-sizing:border-box;
+    -webkit-transition:margin .2s ease-out;
+    -moz-transition:margin .2s ease-out;
+    -ms-transition:margin .2s ease-out;
+    -o-transition:margin .2s ease-out;
+    transition:margin .2s ease-out;
+}
+
+.rotator > li:hover {
+    margin:-7px 0 0 0;
+    cursor:pointer;
+}
+
+.rotator > li > div {
+    background:#999;
+    width: 100%;
+    height: 100%;
+    line-height: 0;
+    border-radius: 1rem;
+    overflow:hidden;
+    box-shadow:0 5px 5px 0px rgba(0,0,0,.7);
+    -webkit-transition: box-shadow .2s ease-out;
+    -moz-transition:box-shadow .2s ease-out;
+    -ms-transition:box-shadow .2s ease-out;
+    -o-transition:box-shadow .2s ease-out;
+    transition:box-shadow .2s ease-out;
+}
+
+.rotator > li:hover > div { box-shadow:0 20px 15px -10px rgba(0,0,0,.3); }
+
+.rotator img { height: 100%; }
+
+/*Desktop and Tablet*/
+@-webkit-keyframes slide {
+    0%          { margin:0; }
+    5%,50%      { margin:0 0 0 -100%; }
+    55%, 100%   { margin:0; }
+}
+
+@-moz-keyframes slide {
+    0%          { margin:0; }
+    5%,50%      { margin:0 0 0 -100%; }
+    55%,100%    { margin:0; }
+}
+
+@-ms-keyframes slide {
+    0%          { margin:0; }
+    5%,50%      { margin:0 0 0 -100%; }
+    55%,100%    { margin:0; }
+}
+
+@-o-keyframes slide {
+    0%          { margin:0; }
+    5%,50%      { margin:0 0 0 -100%; }
+    55%,100%    { margin:0; }
+}
+
+@keyframes slide {
+    0%          { margin:0; }
+    5%,50%      { margin:0 0 0 -100%; }
+    55%,100%    { margin:0; }
+}
+  
+/*Mobile*/
+@-webkit-keyframes slide_mobile {
+    0%, 22%     { margin:0; }
+    25%, 47%    { margin:0 0 0 -100%; }  
+    50%, 72%    { margin:0 0 0 -200%; }
+    75%, 97%    { margin:0 0 0 -300%; }
+    100%        { margin:0; }
+}
+
+@-moz-keyframes slide_mobile {
+    0%, 22%     { margin:0; }
+    25%, 47%    { margin:0 0 0 -100%; }  
+    50%, 72%    { margin:0 0 0 -200%; }
+    75%, 97%    { margin:0 0 0 -300%; }
+    100%        { margin:0; }
+}
+
+@-ms-keyframes slide_mobile {
+    0%, 22%     { margin:0; }
+    25%, 47%    { margin:0 0 0 -100%; }  
+    50%, 72%    { margin:0 0 0 -200%; }
+    75%, 97%    { margin:0 0 0 -300%; }
+    100%        { margin:0; }
+}
+
+@-o-keyframes slide_mobile {
+    0%, 22%     { margin:0; }
+    25%, 47%    { margin:0 0 0 -100%; }  
+    50%, 72%    { margin:0 0 0 -200%; }
+    75%, 97%    { margin:0 0 0 -300%; }
+    100%        { margin:0; }
+}
+  
+@keyframes slide_mobile {
+    0%, 22%     { margin:0; }
+    25%, 47%    { margin:0 0 0 -100%; }  
+    50%, 72%    { margin:0 0 0 -200%; }
+    75%, 97%    { margin:0 0 0 -300%; }
+    100%        { margin:0; }
+}
+
+.projectsDescription {
+    padding: 0.5rem;
+    font-size: 1rem;
+    text-align: justify;
+}
+
+/* ------------------------------ */
+
 /* ------ calendario.html ------ */
 
 .articleCalendar { align-content: flex-start; }
@@ -330,9 +483,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     align-content: center;
 }
 
-#mouth {
-    width: 20rem;
-}
+#mouth { width: 20rem; }
 
 .currentDate button {
     width: 2rem;
@@ -1218,7 +1369,6 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     box-shadow: 0px 50px 100px rgba(0, 0, 0, 0.4)
 }
 
-  
 /* ------------------------------ */
 
 /* ------ contato.html ------ */
@@ -1283,9 +1433,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     color: #afafb6;
 }
 
-.details a {
-    text-decoration: none;
-}
+.details a { text-decoration: none; }
 
 .contactContainer .contactContent .right-side{
     width: 75%;
@@ -1342,7 +1490,6 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 
 /* ------------------------------ */
 
-
 footer {
     width: 100%;
     height: 10rem;
@@ -1355,9 +1502,7 @@ footer {
     background: var(--colorPalletOne);
 }
 
-footer ul {
-    list-style: none;
-}
+footer ul { list-style: none; }
 
 .footerBar {
     width: 45%;
@@ -1426,41 +1571,51 @@ footer ul {
     color: #FFFFFF;
 }
 
-
 /* ------ Responsividade ------ */
 
 @media (max-width: 950px) {
     .contactContainer{
-      width: 90%;
-      padding: 30px 40px 40px 35px ;
+        width: 90%;
+        padding: 30px 40px 40px 35px ;
     }
     .contactContainer .contactContent .right-side{
-     width: 75%;
-     margin-left: 55px;
+        width: 75%;
+        margin-left: 55px;
     }
 }
 @media (max-width: 820px) {
     .contactContainer{
-      margin: 40px 0;
-      height: 100%;
+        margin: 40px 0;
+        height: 100%;
     }
-    .contactContainer .contactContent{
-      flex-direction: column-reverse;
+    .contactContainer .contactContent{ flex-direction: column-reverse; }
+    .contactContainer .contactContent .left-side{
+        width: 100%;
+        flex-direction: row;
+        margin-top: 40px;
+        justify-content: center;
+        flex-wrap: wrap;
     }
-   .contactContainer .contactContent .left-side{
-     width: 100%;
-     flex-direction: row;
-     margin-top: 40px;
-     justify-content: center;
-     flex-wrap: wrap;
-   }
-   .contactContainer .contactContent .left-side::before{
-     display: none;
-   }
-   .contactContainer .contactContent .right-side{
-     width: 100%;
-     margin-left: 0;
-   }
+    .contactContainer .contactContent .left-side::before{ display: none; }
+    .contactContainer .contactContent .right-side{
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .rotator { width:266%; }
+}
+
+@media only screen and (max-width: 520px) {
+    .rotator {
+        width:400%;
+        -webkit-animation: slide_mobile 25s infinite ease-out;
+        -moz-animation:    slide_mobile 25s infinite ease-out;
+        -ms-animation:     slide_mobile 25s infinite ease-out;
+        -o-animation:      slide_mobile 25s infinite ease-out;
+        animation:         slide_mobile 25s infinite ease-out;
+    }
 }
 
 @media (width < 321px) {
@@ -1469,13 +1624,9 @@ footer ul {
         overflow: auto;
     }
 
-    article {
-        height: 100%;
-    }
+    article { height: 100%; }
 
-    section {
-        height: 85rem;
-    }
+    section { height: 85rem; }
 
     nav {
         width: 100%;
@@ -1517,10 +1668,7 @@ footer ul {
         padding: 1rem;
     }
 
-    .navBar.active {
-        display: flex;
-    }
+    .navBar.active { display: flex; }
 }
-
 
 /* ------------------------------ */
