--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,46 @@ section {
 
 section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 
+/* ------ funcionarios.html ------ */
+
+.articleFuncionarios { align-content: flex-start; }
+
+.funcionariosSection { height: 100%; }
+
+.funcionariosSection h1 {
+    font-size: 2rem;
+    margin: 2rem 0;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+tr:nth-child(odd) {
+    background: #612c8acc;
+    color: #FFFFFF;
+}
+
+tr:hover {
+    background: var(--colorPalletThree);
+    color: #FFFFFF;
+}
+
+th, td {
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    text-align: center;
+    text-transform: uppercase;
+    background-color: var(--colorPalletOne);
+    color: #ffffff;
+}
+
+/* ------------------------------ */
+
 /* ------ index.html ------ */
 
 .indexBanner {
@@ -210,7 +250,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 
 .mainTransparencia article section:first-child { display: block; }
 
-.mainTransparencia ul {
+.sub-menu {
     width: 100%;
     max-height: 5rem;
     overflow-x: auto;
@@ -226,7 +266,7 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     background: #ff336680;
 }
 
-.mainTransparencia li {
+.sub-menu li {
     flex: 0 0 auto;
     width: auto;
     height: 3rem;
@@ -236,18 +276,37 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
     padding: 0.5rem;
 }
 
-.mainTransparencia li:hover {
+.sub-menu li:hover {
     background-color: var(--colorPalletTwo);
     border-radius: 2rem;
 }
 
-.mainTransparencia li > a {
+.sub-menu li > a {
     width: 100%;
     height: 100%;
     text-align: center;
     align-content: center;
     color: #000000;
     text-decoration: none;
+}
+
+#normas h1 {
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+
+.normasPingo {
+    column-count: 2;
+    column-gap: 3rem;
+    }
+
+.normasPingo ul {
+    margin-left: 2rem;
+}
+
+.destaque {
+    color: var(--colorPalletThree);
+    font-weight: bolder;
 }
 
 #legal h1 {
@@ -264,8 +323,17 @@ section:nth-child(odd) { background-color: var(--colorPalletTwo); }
 .portarias {
     width: 100%;
     height: 100%;
-    column-count: 2;
-    column-gap: 5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.colOne, .colTwo {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .portarias span, .portarias a,
